# interactive-lectures

./: README.md  pyproject.toml
data/: shap_values.pickle
notebooks/: 0. Introduction.ipynb  1.1. A Simple Estimation Problem.ipynb  1.2. Linear Regression.ipynb  1.3. Basis Functions and Feature Engineering.ipynb  1.4. Categorical Values and Logistic Regression.ipynb  1.5. Regularization.ipynb  2.1. Decision Tree Learning.ipynb  2.2. Regression Trees and Overfitting.ipynb  2.3. DT Ensembles.ipynb  3.1. Introduction to Neural Networks.ipynb  3.2. Deep Learning.ipynb  UC01. Anomaly Detection in Taxi Calls.ipynb  UC02.1. RUL Based Maintenance.ipynb  UC02.2. Probabilistic RUL Estimation.ipynb  UC03. Kidney Paired Donation.ipynb  UC04. Click-Through Rate Prediction .ipynb  UC07.1. Emergency Deparment Arrivals.ipynb  UC07.2. Arrival Prediction via Neuro-Probabilistic Models.ipynb  UC08.1. Anomaly Detection in HPC Centers.ipynb  UC08.2. Autoencoders for Anomaly Detection.ipynb  UC09.1. Biomedical Data Analysis.ipynb  UC09.2. A Baseline Approach.ipynb  UC09.3. Using a Non-Linear Model.ipynb  UC09.4. Additive Feature Attribution.ipynb  UC10.1 Learning ODEs.ipynb  UC10.2 Better Learning for ODEs.ipynb  UC10.3 Universal Ordinary Differential Equations.ipynb  UC10.4 From UDEs to PINNs.ipynb
notebooks/util/: util_at.py  util_iml.py
