[project]
name = "lectures"
version = "0.1.0"
description = ""
authors = [
    {name = "Michele Lombardi",email = "michele.lombardi2@unibo.it"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.5.2,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ortools (>=9.12,<9.13)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "tensorflow-lattice (>=2.1.1,<3.0.0)",
    "tensorflow-probability (>=0.25.0,<0.26.0)",
    "pydot (>=4.0.1,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.50.0,<0.51.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "bayesian-optimization (>=3.2.0,<4.0.0)",
    "tf-keras (>=2.20.1,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "protobuf (>=5.28.3,<6)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab-rise (>=0.43.1,<0.44.0)",
    "nbconvert[webpdf] (>=7.16.6,<8.0.0)"
]
